force-app/main/default/objects/IT_Category_Queue_Map__mdt/IT_Category_Queue_Map__mdt.object-meta.xml
<CustomObject>
    <description>Maps IT issue category keywords to Case queue DeveloperNames for the Campus IT triage agent. Admins can change routing without a code deploy.</description>
    <label>IT Category Queue Map</label>
    <pluralLabel>IT Category Queue Maps</pluralLabel>
</CustomObject>