force-app/main/default/objects/IT_Category_Queue_Map__mdt/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <description>Optional comma-separated alternate keywords (for example wifi,vpn) that route to the same queue.</description>
    <label>Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>