force-app/main/default/objects/IT_Category_Queue_Map__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this row supplies the fallback queue for unmatched or blank categories.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>