force-app/main/default/objects/IT_Category_Queue_Map__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>Primary category keyword matched as a case-insensitive substring of the supplied category.</description>
    <label>Keyword</label>
    <length>40</length>
    <type>Text</type>
</CustomField>