force-app/main/default/objects/IT_Category_Queue_Map__mdt/fields/Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developer_Name__c</fullName>
    <description>DeveloperName of the Case queue to assign. Do not store Salesforce record IDs.</description>
    <label>Queue Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>